crates/uitest/fixtures/ty_check/payable_on_unsupported_items.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_unsupported_items.fe
---
error[13-0001]: `#[payable]` is only valid on `init` blocks and `recv` arms (found on fn)
  ┌─ payable_on_unsupported_items.fe:1:1
  │
1 │ #[payable]
  │ ^^^^^^^^^^ move this attribute to an `init` block or `recv` arm

error[13-0001]: `#[payable]` is only valid on `init` blocks and `recv` arms (found on struct)
  ┌─ payable_on_unsupported_items.fe:4:1
  │
4 │ #[payable]
  │ ^^^^^^^^^^ move this attribute to an `init` block or `recv` arm

error[13-0001]: `#[payable]` is only valid on `init` blocks and `recv` arms (found on enum)
  ┌─ payable_on_unsupported_items.fe:7:1
  │
7 │ #[payable]
  │ ^^^^^^^^^^ move this attribute to an `init` block or `recv` arm

error[13-0001]: `#[payable]` is only valid on `init` blocks and `recv` arms (found on const)
   ┌─ payable_on_unsupported_items.fe:10:1
   │
10 │ #[payable]
   │ ^^^^^^^^^^ move this attribute to an `init` block or `recv` arm

error[13-0001]: `#[payable]` is only valid on `init` blocks and `recv` arms (found on extern fn)
   ┌─ payable_on_unsupported_items.fe:14:5
   │
14 │     #[payable]
   │     ^^^^^^^^^^ move this attribute to an `init` block or `recv` arm
